--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/controllers2.js"></script>    
+    <script src="js/controllers2.js"></script>
+    <script src="js/categories.js"></script>    
   </head>
 
   <body ng-app="starter">
