--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers2.js"></script>
-    <script src="js/categories.js"></script>    
+    <script src="js/categories.js"></script> 
+    <script src="js/productdetails.js"></script>      
   </head>
 
   <body ng-app="starter">
