--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     <script src="js/controllers2.js"></script>
     <script src="js/categories.js"></script> 
     <script src="js/product.list.js"></script>
-    <script src="js/productdetails.js"></script>    
+    <script src="js/product.details.js"></script>    
   </head>
 
   <body ng-app="starter">
