--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/alignment.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
     <link href="css/paul.css" rel="stylesheet">
 
