--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,9 @@
     <script src="js/controllers2.js"></script>
     <script src="js/categories.js"></script> 
     <script src="js/product.list.js"></script>
-    <script src="js/product.details.js"></script>    
+    <script src="js/product.details.js"></script>
+    <script src="js/cart.list.js"></script>
+    <script src="js/order.summary.js"></script>    
   </head>
 
   <body ng-app="starter">
