--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,8 @@
     <script src="js/product.list.js"></script>
     <script src="js/product.details.js"></script>
     <script src="js/cart.list.js"></script>
-    <script src="js/order.summary.js"></script>    
+    <script src="js/order.summary.js"></script>
+    <script src="js/user.js"></script>   
   </head>
 
   <body ng-app="starter">
