--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/alignment.css" rel="stylesheet">
-    <link href="css/login.css" rel="stylesheet">
+    <link href="css/hunge.css" rel="stylesheet">
     <link href="css/paul.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -30,7 +30,9 @@
     <script src="js/product.details.js"></script>
     <script src="js/cart.list.js"></script>
     <script src="js/order.summary.js"></script>
-    <script src="js/user.js"></script>   
+    <script src="js/user.js"></script>
+    <script src="js/guest.js"></script>   
+    <script src="js/payment.js"></script>   
   </head>
 
   <body ng-app="starter">
