--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,9 @@
     <script src="js/cart.list.js"></script>
     <script src="js/order.summary.js"></script>
     <script src="js/user.js"></script>
-    <script src="js/guest.js"></script>   
-    <script src="js/payment.js"></script>   
+    <script src="js/billing.js"></script>   
+    <script src="js/payment.js"></script> 
+    <script src="js/shipping.js"></script>   
   </head>
 
   <body ng-app="starter">
