--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/billing.js"></script>   
     <script src="js/payment.js"></script> 
     <script src="js/shipping.js"></script>
+    <script src="js/search.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.js"></script>    
   </head>
 
