--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/payment.js"></script> 
     <script src="js/shipping.js"></script>
     <script src="js/search.js"></script>
+    <script src="js/order.history.js"></script> 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.js"></script>    
   </head>
 
