added order history details.

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/shipping.js"></script>
     <script src="js/search.js"></script>
     <script src="js/order.history.js"></script> 
+    <script src="js/order.history.details.js"></script> 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.js"></script>    
   </head>
 
