--- a/www/index.html
+++ b/www/index.html
@@ -36,12 +36,32 @@
     <script src="js/shipping.js"></script>
     <script src="js/search.js"></script>
     <script src="js/order.history.js"></script> 
-    <script src="js/order.history.details.js"></script>  
+    <script src="js/order.history.details.js"></script>
+    <script src="lib/angularjs/1.4.3/angular-messages.js"></script>
   </head>
 
   <body ng-app="starter">
 
     <ion-nav-view></ion-nav-view>
+
+    <script id="error-list.html" type="text/ng-template">  
+        <div class="error" ng-message="required">
+          <i class="ion-information-circled"></i> 
+          This field is required!
+        </div>
+        <div class="error" ng-message="minlength">
+          <i class="ion-information-circled"></i> 
+          Minimum length of this field is 5 characters!
+        </div>
+        <div class="error" ng-message="maxlength">
+          <i class="ion-information-circled"></i> 
+          Maximum length of this field is 20 characters!
+        </div>
+        <div class="error" ng-message="signUpForm.confpassword.$error">
+          <i class="ion-information-circled"></i> 
+          The password is not match!
+        </div>
+    </script>   
 
   </body>
   
