added form validation

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/order.history.js"></script> 
     <script src="js/order.history.details.js"></script>
     <script src="lib/angularjs/1.4.3/angular-messages.js"></script>
+    <script src="lib/angularjs/1.4.3/angular.min.js"></script>
   </head>
 
   <body ng-app="starter">
@@ -61,7 +62,7 @@
           <i class="ion-information-circled"></i> 
           The password is not match!
         </div>
-    </script>   
+    </script>  
 
   </body>
   
