--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="css/alignment.css" rel="stylesheet">
     <link href="css/hunge.css" rel="stylesheet">
     <link href="css/paul.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
