--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/search.js"></script>
     <script src="js/order.history.js"></script> 
     <script src="js/order.history.details.js"></script>
+    <!-- lib -->
     <script src="lib/angularjs/1.4.3/angular-messages.js"></script>
     <script src="lib/angularjs/1.4.3/angular.min.js"></script>
   </head>
