referrer and ios platform

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
     <script src="js/order.summary.js"></script>
     <script src="js/user.js"></script>
     <script src="js/billing.js"></script>   
-    <script src="js/payment.js"></script> 
+    <!-- <script src="js/payment.js"></script> --> 
     <script src="js/shipping.js"></script>
     <script src="js/search.js"></script>
     <script src="js/order.history.js"></script> 
